2004-01-31  Danny Smith  <dannysmith@users.sourceforge.net>

	* mingwex/math/cephes_emath.h (__enan_64): Fix thinko.
	(__enan_NI16): Fix another one.
	(__enan_NBITS): Tidy.

2004-01-16  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/stdint.h  Fix __STDC_CONSTANT_MACROS for 8 and 16 bit
	types. (Thanks to John Maddock for report.)

2004-01-14  Greg Chicares  <chicares@users.sourceforge.net>

	* include/tchar.h (_puttchar): Define.

2003-12-13  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/stdio.h:(_fileno): Define macro version after both
	fileno and _fileno functions declared.

	* include/stdio.h (_rmtmp, rmtmp): Add prototypes.
	* moldnames.def.in (rmtmp) Add stub.

2003-11-27  Dimitry Sibiryakov  <aafemt@users.sourceforge.net>

	* include/signal.h (SIG_SGE, SIG_ACK): Add defines.

2003-10-27  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/math.h: Guard ISO C99 additions with __cplusplus
	not __GLIBCPP__.

2003-10-21  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/_mingw.h: Define __attribute__((x)) to nothing
	if not __GNUC__.

2003-10-21  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/complex.h: New file.
	* mingwex/complex: New directory.
	* mingwex/complex/cabs.c: New file.
	* mingwex/complex/cacos.c: New file.
	* mingwex/complex/cacosh.c: New file.
	* mingwex/complex/casin.c: New file.
	* mingwex/complex/casinh.c: New file.
	* mingwex/complex/catan.c: New file.
	* mingwex/complex/catanh.c: New file.
	* mingwex/complex/ccos.c: New file.
	* mingwex/complex/ccosh.c: New file.
	* mingwex/complex/cexp.c: New file.
	* mingwex/complex/cimag.c: New file.
	* mingwex/complex/clog.c: New file.
	* mingwex/complex/cpow.c: New file.
	* mingwex/complex/cproj.c: New file.
	* mingwex/complex/creal.c: New file.
	* mingwex/complex/csin.c: New file.
	* mingwex/complex/csinh.c: New file.
	* mingwex/complex/csqrt.c: New file.
	* mingwex/complex/ctan.c: New file.
	* mingwex/complex/ctanh.c: New file.