@@ -1,3 +1,9 @@
+2004-02-01  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* mingwex/math/powl.c (powl): Return infinity if
+	extended precision multiplication of x by log2(y)
+	overflows.
+
 2004-01-31  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* mingwex/math/cephes_emath.h (__enan_64): Fix thinko.
